# devlocal

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVLOCAL_IMPLEMENTATION_PLAN.md  LICENSE  README.md  audit.toml  eslint.config.js  lefthook.yml  package.json  pnpm-lock.yaml  src
.github/: PULL_REQUEST_TEMPLATE.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
crates/db/: Cargo.toml
crates/db/migrations/: 0001_env_vars.sql
crates/db/src/: commands.rs  lib.rs
crates/docker-ops/: Cargo.toml
crates/docker-ops/src/: error.rs  lib.rs
crates/docker-ops/tests/: docker_mock.rs
crates/tauri-shell/: Cargo.toml
crates/tauri-shell/src/: db.rs  docker.rs  error.rs  lib.rs  settings.rs
docs/superpowers/plans/: 2026-05-06-core-foundation-design.md  2026-05-06-core-foundation-implementation.md  2026-05-06-data-logs-design.md  2026-05-06-data-logs-implementation.md  2026-05-06-enhanced-docker-design.md  2026-05-06-enhanced-docker-implementation.md  2026-05-06-frontend-modernization-design.md  2026-05-06-frontend-modernization-implementation.md  2026-05-06-quality-distribution-design.md  2026-05-06-quality-distribution-implementation.md  task-4-images.md
src/: App.tsx  main.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 0003_env_vars_scope_index.sql
src-tauri/src/: lib.rs
src-tauri/src/db/: mod.rs
src-tauri/src/docker/: error.rs  mod.rs
src-tauri/src/settings/: mod.rs
src/__tests__/: Environments.test.tsx  Logs.test.tsx  Network.test.tsx  Settings.test.tsx  useQueries.test.tsx
src/components/: ContainerDetailsModal.tsx  ErrorBoundary.tsx  Skeleton.tsx  Toast.tsx
src/components/layout/: AppShell.tsx  SideNav.tsx  TopBar.tsx
src/hooks/: useModalClose.ts  useQueries.ts
src/lib/: ipc.ts
src/pages/: Dashboard.tsx  Environments.tsx  Logs.tsx  Network.tsx  Settings.tsx  Volumes.tsx
src/store/: containerSlice.ts
src/styles/: tokens.css
