[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
keyring = "3"
tauri = { version = "2" }
ts-rs = { version = "10", features = ["serde-compat"] }
