[package]
name = "db"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros", "migrate"] }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
keyring = "3"
serde_yaml = "0.9"
base64 = "0.22"
tauri = { version = "2" }
ts-rs = { version = "10", features = ["serde-compat"] }

[dev-dependencies]
tempfile = "3"
proptest = "1"
proptest-derive = "0.5"
serde_json = "1"
