[package]
name = "docker-ops"
version = "0.1.0"
edition = "2021"

[dependencies]
bollard = { version = "0.18", features = ["ssl"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
sysinfo = "0.33"
thiserror = "2"
ts-rs = { version = "10", features = ["serde-compat"] }
