[package]
name = "tauri-shell"
version = "0.1.0"
edition = "2021"

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
bollard = { version = "0.18", features = ["ssl"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
sysinfo = "0.33"
futures-util = "0.3"
tokio = { version = "1", features = ["full"] }
docker-ops = { path = "../docker-ops" }
db = { path = "../db" }
ts-rs = { version = "10", features = ["serde-compat"] }
